[package]
name = "catch_my_bus"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[lib]
name = "dvbrs"

[dependencies]
hyper = "0.5"
rustc-serialize = "0.3"
time = "0.1"
url = "*"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs.git"

[dependencies.notify-rust]
path = "../notify-rust"

